pykframework/src/tests/unit/kore/test-data/definitions/pass/test-pattern-6.kore
[]

module TEST-PATTERN-6

  axiom{S}
    \implies{S}(X:S,X:S) []

endmodule []
