pykframework/src/tests/unit/kore/test-data/definitions/should-fail/test-hooks-4.kore
[]

module TEST-HOOKS-4

  // Verification failure: missing hook attribute
  hooked-sort S{} []

endmodule []
